15282: Style system added

--- a/soilmate_frontend/public/index.html
+++ b/soilmate_frontend/public/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <!-- favicon - start -->
     <link rel="icon" href="%PUBLIC_URL%/assets/favicon/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/favicon/favicon-16x16.png" />
@@ -13,6 +14,15 @@
     <link rel="mask-icon" href="%PUBLIC_URL%/assets/favicon/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#000000" />
     <meta name="theme-color" content="#ffffff" />
+    <!-- favicon - end -->
+
+    <!-- font - start -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <!-- font - end -->
 
     <title>SoilMate</title>
   </head>
