--- a/webviewer/public/index.html
+++ b/webviewer/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="Geoap" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- favicon - start -->
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css"/>
     <!-- Leaflet map end -->
 
-    <title>SoilMate</title>
+    <title>Geoap</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
