ID-22817: rename-fix

--- a/webviewer/public/index.html
+++ b/webviewer/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" id="description" content="SoilMate" />
+    <meta name="description" id="description" content="Geoap" />
     <link rel="manifest" id="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- favicon - start -->
@@ -67,7 +67,7 @@
         var description = document.getElementById('description');
 
         var domainMappings = {
-          'localhost': {
+          'agrieos.in': {
             title: 'Agrieos',
             favicon: '%PUBLIC_URL%/assets/favicon/agrieos-logo.ico',
             manifest: '%PUBLIC_URL%/manifest_agrieos.json',
