--- a/webviewer/public/index.html
+++ b/webviewer/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" id="description" content="Geoap" />
+    <meta name="msapplication-config" id="msapplication" content="browserconfig.xml" />
     <link rel="manifest" id="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- favicon - start -->
@@ -11,6 +12,7 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
+      id="apple-touch"
       href="%PUBLIC_URL%/assets/favicon/apple-touch-icon.png"
     />
     <link
@@ -29,6 +31,7 @@
     />
     <link
       rel="mask-icon"
+      id="mask-icon"
       href="%PUBLIC_URL%/assets/favicon/safari-pinned-tab.svg"
       color="#5bbad5"
     />
@@ -65,6 +68,9 @@
         var favicon32 = document.getElementById('favicon32');
         var favicon16 = document.getElementById('favicon16');
         var description = document.getElementById('description');
+        var appleTouch = document.getElementById('apple-touch');
+        var maskIcon = document.getElementById('mask-icon');
+        var msapplication = document.getElementById('msapplication');
 
         var domainMappings = {
           'agrieos.in': {
@@ -74,6 +80,20 @@
             favicon32: '%PUBLIC_URL%/assets/favicon/agrieos-logo.png',
             favicon16: '%PUBLIC_URL%/assets/favicon/agrieos-logo.png',
             description: 'Agrieos',
+            appleTouch: '%PUBLIC_URL%/assets/favicon/apple-touch-icon.png',
+            maskIcon: '%PUBLIC_URL%/assets/favicon/safari-pinned-tab.svg',
+            msapplication: 'browserconfig.xml'
+          },
+          'portal.soilmate.ai': {
+            title: 'SoilMate', //
+            favicon: '%PUBLIC_URL%/assets/favicon/favicon-soilmate.ico',//
+            manifest: '%PUBLIC_URL%/manifest_soilmate.json', //
+            favicon32: '%PUBLIC_URL%/assets/favicon/favicon-32x32-soilmate.png', //
+            favicon16: '%PUBLIC_URL%/assets/favicon/favicon-16x16-soilmate.png', //
+            description: 'SoilMate', //
+            appleTouch: '%PUBLIC_URL%/assets/favicon/apple-touch-icon-soilmate.png',
+            maskIcon: '%PUBLIC_URL%/assets/favicon/safari-pinned-tab-soilmate.svg',
+            msapplication: 'browserconfig-soilmate.xml'
           },
         };
 
@@ -85,6 +105,9 @@
           favicon32.href = mapping.favicon32;
           favicon16.href = mapping.favicon16;
           description.content = mapping.description;
+          appleTouch.href = mapping.appleTouch;
+          maskIcon.href = mapping.maskIcon;
+          msapplication.content = mapping.msapplication;
         }
       })();
     </script>
