ID23566: title update

--- a/webviewer/public/index.html
+++ b/webviewer/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title id="page-title">Geoap</title>
     <meta name="description" id="description" content="Geoap" />
-    <meta property="og:title" id="og_title" content="Geoap" />
+    <meta property="og:title" id="og_title" content="__OG_TITLE__" />
     <meta
       property="og:description"
       id="og_description"
